# trading_strategy_tester

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
database/dataframe_history/: LKOH.csv  MTSS.csv  PLZL.csv  SBER.csv  SBERP.csv
database/processed_data_csv/: LKOH.csv  MTSS.csv  SBERP.csv
database/processed_data_json/: LKOH.json  MTSS.json  SBERP.json
dividends_history/not processed/: ABRD.csv  AFKS.csv  AFLT.csv  AGRO.csv  AKRN.csv  ALRS.csv  AQUA.csv  ASTR.csv  AVAN.csv  BANE.csv  BANEP.csv  BELU.csv  BISVP.csv  BSPB.csv  BSPBP.csv  CBOM.csv  CHMF.csv  CNTL.csv  CNTLP.csv  DELI.csv  DIAS.csv  ELFV.csv  ELMT.csv  ETLN.csv  EUTR.csv  FEES.csv  FIXP.csv  FLOT.csv  GAZP.csv  GCHE.csv  GEMC.csv  GMKN.csv  HEAD.csv  HIMCP.csv  HNFG.csv  HYDR.csv  IRAO.csv  KAZT.csv  KAZTP.csv  KMAZ.csv  (+76 more)
draft/: data_parser.py  test.py
processed_data/: MTSS.csv  MTSS.json  MTSS_.json
static/: scripts.js  styles.css
tests/: conftest.py  test copy.py  test.py  test_data_reader.py  test_strat_calculator.py  testing_buy.py
trading_strategy_tester/: config.py  main.py
trading_strategy_tester/api/: app.py  routers.py  schemas.py
trading_strategy_tester/database_access/: database_loader.py  database_saver.py
trading_strategy_tester/facade/: parsing_facade.py  project_facade.py
trading_strategy_tester/models/: request_parameters.py  stock_candle.py  strategy_parameters.py  trading_data.py  trading_result.py
trading_strategy_tester/services/: calculate_results.py  convert_df_to_str.py  convert_to_decimal.py  data_parser.py  data_reader.py  database_gateway.py  (+3 more)
(+3 files in other folders)
