[tool.poetry]
name = "trading-strategy-tester"
version = "0.1.0"
description = ""
authors = ["aleks <newacb1979@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
tqdm = "^4.67.1"
moexalgo = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
